# litetran-qt

./: .gitignore  CMakeLists.txt  README.md  RELNOTES.txt  about.html  bitbucket-pipelines.yml  languages.csv  litetran.desktop  litetran.rc  resources.qrc
debian/: changelog  control  copyright  rules
i18n/: English.ts  Russian.ts  en.ts  ru.ts
i18n/about/: English.html  Russian.html
src/: autostart.cpp  autostart.h  clipboard.cpp  clipboard.h  defines.h.in  languagedb.cpp  languagedb.h  languages.cpp  languages.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  menubutton.cpp  menubutton.h  models.cpp  models.h  networkmanager.cpp  networkmanager.h  popup.cpp  popup.h  popup.ui  pronounce.cpp  pronounce.h  request.cpp  request.h  settings.cpp  settings.h  settings.ui  settings.ui.autosave  shortcut.cpp  shortcut.h  textedit.cpp  textedit.h  texttoolbar.cpp  texttoolbar.h  translate.cpp  translate.h  trayicon.cpp  trayicon.h
src/platform/: CMakeLists.txt  autostart.cpp  autostart.h  autostart_mac.cpp  autostart_win.cpp  autostart_x11.cpp  clipboard.cpp  clipboard.h  clipboard_mac.cpp  clipboard_win.cpp  clipboard_x11.cpp
